oi-bus (0.1.12) UNRELEASED; urgency=medium

  * Prepend 'c' to computer nice name when generating a hostname
  * Fix a few HTTP 500 errors
  * Add oi {upload,download,backupzaw} subcommands

 -- Wojciech Dubiel <w.dubiel@fri.edu.pl>  Sun, 02 Feb 2020 20:01:22 +0100

oi-bus (0.1.11) unstable; urgency=medium

  * Autogenerate ansible host names from IP addresses
  * Add oi command

 -- Michał Sidor <michcioperz@asirpa.iscute.ovh>  Sun, 02 Feb 2020 14:14:53 +0100

oi-bus (0.1.10) unstable; urgency=medium

  * Remove oireg.fri.edu.pl from oi-bus.nginx because it exceeded bucket size

 -- Wojciech Dubiel <w.dubiel@fri.edu.pl>  Fri, 31 Jan 2020 10:25:08 +0100

oi-bus (0.1.9) unstable; urgency=medium

  * Add print_hosts command.
  * Add print_dhcp_hosts command.

 -- Michał Sidor <michcioperz@oireg.region.fri.edu.pl>  Sat, 18 Jan 2020 13:51:44 +0100

oi-bus (0.1.8) unstable; urgency=medium

  * Bodge Content-Disposition in backups. Actually still half-broken but idc.

 -- Michał Sidor <michcioperz@oireg.region.fri.edu.pl>  Sat, 18 Jan 2020 13:15:22 +0100

oi-bus (0.1.7) unstable; urgency=medium

  * Bodge printing.

 -- Michał Sidor <michcioperz@oireg.region.fri.edu.pl>  Sat, 18 Jan 2020 12:49:47 +0100

oi-bus (0.1.6) unstable; urgency=medium

  * Sakuga.
  * Add our netboot to nginx config.
  * Stop delivering null ip addresses to ipauthsyncd.
  * Add import_participants command.

 -- Michał Sidor <michcioperz@oireg.region.fri.edu.pl>  Sat, 18 Jan 2020 10:50:56 +0100

oi-bus (0.1.5) unstable; urgency=medium

  * Fix Ansible inventory generation for non-null mac address

 -- Michał Sidor <michcioperz@oireg.region.fri.edu.pl>  Fri, 17 Jan 2020 21:11:56 +0100

oi-bus (0.1.4) unstable; urgency=medium

  * Dismiss invalid values for healthchecks.

 -- Michał Sidor <michcioperz@oireg.region.fri.edu.pl>  Fri, 17 Jan 2020 21:01:51 +0100

oi-bus (0.1.3) unstable; urgency=medium

  * Fix healthcheck typing.
