@@ -1,0 +1,1 @@
+/var/lib/oi-bus/golden/
